--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^17.0.9",
     "@types/react-redux": "^7.1.21",
     "@types/react-router-dom": "^5.3.2",
+    "dotenv": "^10.0.0",
     "firebase": "^9.6.1",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
@@ -21,6 +22,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
+    "typesafe-actions": "^5.1.0",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
