--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.7.13",
     "@types/node-sass": "^4.11.2",
     "@types/react": "^17.0.20",
+    "@types/react-datepicker": "^4.3.4",
     "@types/react-dom": "^17.0.9",
     "@types/react-redux": "^7.1.21",
     "@types/react-router-dom": "^5.3.2",
@@ -17,11 +18,13 @@
     "firebase": "^9.6.1",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
+    "react-datepicker": "^4.5.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
+    "redux-persist": "^6.0.0",
     "typesafe-actions": "^5.1.0",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
