--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^17.0.20",
     "@types/react-datepicker": "^4.3.4",
     "@types/react-dom": "^17.0.9",
+    "@types/react-icons": "^3.0.0",
     "@types/react-redux": "^7.1.21",
     "@types/react-router-dom": "^5.3.2",
     "dotenv": "^10.0.0",
@@ -21,6 +22,7 @@
     "react": "^17.0.2",
     "react-datepicker": "^4.5.0",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
