--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@types/html2canvas": "^1.0.0",
     "@types/jest": "^27.0.1",
+    "@types/moment": "^2.13.0",
     "@types/node": "^16.7.13",
     "@types/node-sass": "^4.11.2",
     "@types/react": "^17.0.20",
@@ -18,6 +20,8 @@
     "@types/react-router-dom": "^5.3.2",
     "dotenv": "^10.0.0",
     "firebase": "^9.6.1",
+    "html2canvas": "^1.4.1",
+    "moment": "^2.29.2",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-datepicker": "^4.5.0",
